@@ -1,5 +1,11 @@
 2021-07-25 Philipp Klaus Krause <pkk AT spth.de>
 
+	* device/lib/stm8/_modsint.s,
+	  device/lib/stm8-large/_modsint.s:
+	  Fix library functions for new calling convention.
+
+2021-07-25 Philipp Klaus Krause <pkk AT spth.de>
+
 	* device/lib/stm8/_mulint.s,
 	  device/lib/stm8/memcpy.s,
 	  device/lib/stm8/strcmp.s,
